--- a/script-exploration.ipynb
+++ b/script-exploration.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "20537896",
+   "execution_count": 1,
+   "id": "0c1a4da9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,38 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "9f992e64",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file = 'data/pinyin_first.txt'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "id": "84366e79",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pinyin_first = open(file, encoding=\"utf8\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "id": "e70b70e0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lines = pinyin_first.readlines()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "id": "c2dd2905",
+   "execution_count": 2,
+   "id": "59ea9580",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,41 +35,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "5c976f06",
+   "execution_count": 3,
+   "id": "fc42adf4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "source_file = 'data/hanzi-to-pinyin.txt'\n",
+    "dest_file = 'data/pinyin-to-hanzi.txt'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a3ecd25b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hanzi_to_pinyin = open(source_file, encoding=\"utf8\")\n",
+    "hanzi_to_pinyin_lines = hanzi_to_pinyin.readlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "36fcbf2c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import codecs\n",
-    "new_file = codecs.open(file.replace('.txt', '_new.txt'), \"w\", \"utf-8-sig\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "id": "7f46a27e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for line in lines:\n",
+    "pinyin_to_hanzi = codecs.open(dest_file, \"w\", \"utf-8-sig\")\n",
+    "\n",
+    "for line in hanzi_to_pinyin_lines:\n",
     "    if '#separator' in line or '#html' in line:\n",
     "        continue\n",
     "    array = line.split()\n",
+    "    \n",
     "    hanzi = array[0]\n",
     "    pinyin = array[1] \n",
     "    line = nth_repl(line, hanzi, pinyin, 1)\n",
     "    line = nth_repl(line, pinyin, hanzi, 2)\n",
-    "    new_file.write(line)"
+    "    pinyin_to_hanzi.write(line)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "7002e104",
+   "execution_count": 6,
+   "id": "00f772e7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_file.close()"
+    "hanzi_to_pinyin.close()\n",
+    "pinyin_to_hanzi.close()"
    ]
   }
  ],
