adding script for detecting unique Chinese chars in text

--- a/script-exploration.ipynb
+++ b/script-exploration.ipynb
@@ -87,6 +87,103 @@
     "hanzi_to_pinyin.close()\n",
     "pinyin_to_hanzi.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "988bc982",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# second script, find unqiue chinese characters\n",
+    "# shamelessly stolen form https://medium.com/the-artificial-impostor/detecting-chinese-characters-in-unicode-strings-4ac839ba313a\n",
+    "import re\n",
+    "\n",
+    "def cjk_detect(char, char_list):\n",
+    "    # korean\n",
+    "    if re.search(\"[\\uac00-\\ud7a3]\", char) and char not in char_list:\n",
+    "        char_list.append(char)        \n",
+    "    # japanese\n",
+    "    if re.search(\"[\\u3040-\\u30ff]\", char) and char not in char_list:\n",
+    "        char_list.append(char)\n",
+    "    # chinese\n",
+    "    if re.search(\"[\\u4e00-\\u9FFF]\", char) and char not in char_list:\n",
+    "        char_list.append(char)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "5f4658a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "source_file = 'data/Chinese-pinyin-to-hanzi.txt'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "7b196849",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "chinese_pinyin_to_hanzi = open(source_file, encoding=\"utf8\")\n",
+    "char_list = []\n",
+    "print(len(char_list))\n",
+    "while 1:\n",
+    "    # read by character\n",
+    "    char = chinese_pinyin_to_hanzi.read(1)\n",
+    "    cjk_detect(char, char_list)\n",
+    "    if not char:\n",
+    "        break\n",
+    "chinese_pinyin_to_hanzi.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "324d6214",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 109 unique 汉字 in this deck.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('There are ' + str(len(char_list)) + ' unique 汉字 in this deck.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "381b6b2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['业', '乌', '人', '仓', '仔', '代', '件', '位', '体', '你', '健', '克', '公', '农', '动', '医', '卫', '厨', '司', '员', '商', '士', '大', '头', '夹', '好', '子', '宠', '察', '山', '工', '师', '帽', '康', '律', '恤', '戴', '手', '护', '拿', '指', '服', '术', '机', '松', '树', '校', '植', '母', '毛', '汗', '洲', '流', '消', '游', '熊', '爱', '牛', '物', '猫', '猴', '王', '现', '生', '盖', '眼', '睛', '短', '码', '祝', '程', '穿', '绵', '羊', '美', '翅', '职', '肘', '肩', '胳', '脖', '脚', '脸', '膀', '膊', '膝', '艺', '衣', '衫', '衬', '裙', '裤', '西', '警', '计', '记', '设', '豹', '身', '软', '运', '连', '部', '镜', '长', '防', '鞋', '鼠', '龟']\n"
+     ]
+    }
+   ],
+   "source": [
+    "char_list.sort()\n",
+    "print(char_list)"
+   ]
   }
  ],
  "metadata": {
