adding everything except the .apkg data

--- a/script-exploration.ipynb
+++ b/script-exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "0c1a4da9",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "59ea9580",
    "metadata": {},
    "outputs": [],
@@ -35,34 +35,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "fc42adf4",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "source_file = 'data/hanzi-to-pinyin.txt'\n",
-    "dest_file = 'data/pinyin-to-hanzi.txt'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "a3ecd25b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hanzi_to_pinyin = open(source_file, encoding=\"utf8\")\n",
-    "hanzi_to_pinyin_lines = hanzi_to_pinyin.readlines()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "a3ecd25b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "36fcbf2c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import codecs\n",
+    "\n",
+    "source_file = 'data/hanzi-to-pinyin.txt'\n",
+    "dest_file = 'data/pinyin-to-hanzi.txt'\n",
+    "\n",
+    "hanzi_to_pinyin = open(source_file, encoding=\"utf8\")\n",
+    "hanzi_to_pinyin_lines = hanzi_to_pinyin.readlines()\n",
+    "\n",
     "pinyin_to_hanzi = codecs.open(dest_file, \"w\", \"utf-8-sig\")\n",
     "\n",
     "for line in hanzi_to_pinyin_lines:\n",
@@ -74,24 +75,24 @@
     "    pinyin = array[1] \n",
     "    line = nth_repl(line, hanzi, pinyin, 1)\n",
     "    line = nth_repl(line, pinyin, hanzi, 2)\n",
-    "    pinyin_to_hanzi.write(line)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "00f772e7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    pinyin_to_hanzi.write(line)\n",
+    "\n",
     "hanzi_to_pinyin.close()\n",
     "pinyin_to_hanzi.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "988bc982",
+   "execution_count": 7,
+   "id": "00f772e7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b438a259",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,81 +109,330 @@
     "        char_list.append(char)\n",
     "    # chinese\n",
     "    if re.search(\"[\\u4e00-\\u9FFF]\", char) and char not in char_list:\n",
-    "        char_list.append(char)"
+    "        char_list.append(char)\n",
+    "\n",
+    "def is_cjk_char(char):\n",
+    "    return_bool = (re.search(\"[\\uac00-\\ud7a3]\", char) or re.search(\"[\\u3040-\\u30ff]\", char) or re.search(\"[\\u4e00-\\u9FFF]\", char))\n",
+    "    return return_bool"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "5f4658a1",
+   "execution_count": 9,
+   "id": "5ee8fa1d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "source_file = 'data/Chinese-pinyin-to-hanzi.txt'"
+    "def get_unique_chars(source_file):\n",
+    "    chinese_pinyin_to_hanzi = open(source_file, encoding=\"utf8\")\n",
+    "    char_list = []\n",
+    "    while 1:\n",
+    "        # read by character\n",
+    "        char = chinese_pinyin_to_hanzi.read(1)\n",
+    "        cjk_detect(char, char_list)\n",
+    "        if not char:\n",
+    "            break\n",
+    "    chinese_pinyin_to_hanzi.close()\n",
+    "    print('There are ' + str(len(char_list)) + ' unique 汉字 in ' + source_file)\n",
+    "    #char_list.sort()\n",
+    "    #print(char_list)\n",
+    "    return char_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "7b196849",
+   "execution_count": null,
+   "id": "95f9e598",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c0f99542",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def intersection(lst1, lst2):\n",
+    "    return set(lst1).intersection(lst2)\n",
+    "\n",
+    "def find_new_chars(master, new):\n",
+    "    return (set(new) - set(master).intersection(new))\n",
+    "\n",
+    "def new_list_stats(master_list, new_list):\n",
+    "    intersection_list = intersection(master_list, new_list)\n",
+    "    intersection_count = len(intersection_list)\n",
+    "    new_chars_list = find_new_chars(master_list, new_list)\n",
+    "    new_chars_count = len(new_chars_list)\n",
+    "    print('新汉字 ' + str(new_chars_count))\n",
+    "    \n",
+    "    new_list_unique = set(new_list)\n",
+    "    new_list_unique_count = len(new_list_unique)\n",
+    "    print('已经知道 ' + str(round(100 * (new_list_unique_count - new_chars_count) / new_list_unique_count)) + '%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f2f0cef2",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "There are 561 unique 汉字 in data/Chinese-Master.txt\n",
+      "\n",
+      "There are 260 unique 汉字 in data/chinese-song-db/pharoh.txt\n",
+      "新汉字 126\n",
+      "已经知道 52%\n",
+      "\n",
+      "There are 129 unique 汉字 in data/chinese-song-db/三人游-方大同.txt\n",
+      "新汉字 57\n",
+      "已经知道 56%\n",
+      "\n",
+      "There are 190 unique 汉字 in data/chinese-song-db/乌云中-艾热.txt\n",
+      "新汉字 101\n",
+      "已经知道 47%\n",
+      "\n",
+      "There are 87 unique 汉字 in data/chinese-song-db/勇气.txt\n",
+      "新汉字 0\n",
+      "已经知道 100%\n",
+      "\n",
+      "There are 127 unique 汉字 in data/chinese-song-db/心墙.txt\n",
+      "新汉字 64\n",
+      "已经知道 50%\n",
+      "\n",
+      "There are 95 unique 汉字 in data/chinese-song-db/梁山伯与茱丽叶.txt\n",
+      "新汉字 37\n",
+      "已经知道 61%\n",
+      "\n",
+      "There are 118 unique 汉字 in data/chinese-song-db/爱上你-by2.txt\n",
+      "新汉字 76\n",
+      "已经知道 36%\n",
+      "\n",
+      "There are 298 unique 汉字 in data/chinese-song-db/阿司匹林-王以太.txt\n",
+      "新汉字 164\n",
+      "已经知道 45%\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "chinese_pinyin_to_hanzi = open(source_file, encoding=\"utf8\")\n",
-    "char_list = []\n",
-    "print(len(char_list))\n",
-    "while 1:\n",
-    "    # read by character\n",
-    "    char = chinese_pinyin_to_hanzi.read(1)\n",
-    "    cjk_detect(char, char_list)\n",
-    "    if not char:\n",
-    "        break\n",
-    "chinese_pinyin_to_hanzi.close()"
+    "import os\n",
+    "\n",
+    "master_file = get_unique_chars('data/Chinese-Master.txt')\n",
+    "#print(master_file)\n",
+    "print()\n",
+    "directory = 'data/chinese-song-db/'\n",
+    "# iterate over files in that directory\n",
+    "for filename in os.listdir(directory):\n",
+    "    f = os.path.join(directory, filename)\n",
+    "    # checking if it is a file\n",
+    "    if os.path.isfile(f):\n",
+    "        file_count = get_unique_chars(f)\n",
+    "        new_list_stats(master_file, file_count)\n",
+    "        print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "324d6214",
+   "execution_count": 11,
+   "id": "41220f79",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 109 unique 汉字 in this deck.\n"
+      "There are 561 unique 汉字 in data/Chinese-Master.txt\n"
      ]
     }
    ],
    "source": [
-    "print('There are ' + str(len(char_list)) + ' unique 汉字 in this deck.')"
+    "master_file = get_unique_chars('data/Chinese-Master.txt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "381b6b2a",
+   "execution_count": 12,
+   "id": "c6ba6a17",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['业', '乌', '人', '仓', '仔', '代', '件', '位', '体', '你', '健', '克', '公', '农', '动', '医', '卫', '厨', '司', '员', '商', '士', '大', '头', '夹', '好', '子', '宠', '察', '山', '工', '师', '帽', '康', '律', '恤', '戴', '手', '护', '拿', '指', '服', '术', '机', '松', '树', '校', '植', '母', '毛', '汗', '洲', '流', '消', '游', '熊', '爱', '牛', '物', '猫', '猴', '王', '现', '生', '盖', '眼', '睛', '短', '码', '祝', '程', '穿', '绵', '羊', '美', '翅', '职', '肘', '肩', '胳', '脖', '脚', '脸', '膀', '膊', '膝', '艺', '衣', '衫', '衬', '裙', '裤', '西', '警', '计', '记', '设', '豹', '身', '软', '运', '连', '部', '镜', '长', '防', '鞋', '鼠', '龟']\n"
+      "There are 95 unique 汉字 in data/chinese-song-db/梁山伯与茱丽叶.txt\n"
      ]
     }
    ],
    "source": [
-    "char_list.sort()\n",
-    "print(char_list)"
+    "new_file = get_unique_chars('data/chinese-song-db/梁山伯与茱丽叶.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "6428aa08",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'丽',\n",
+       " '什',\n",
+       " '伯',\n",
+       " '偎',\n",
+       " '句',\n",
+       " '叶',\n",
+       " '合',\n",
+       " '够',\n",
+       " '如',\n",
+       " '害',\n",
+       " '密',\n",
+       " '幸',\n",
+       " '愿',\n",
+       " '懂',\n",
+       " '放',\n",
+       " '未',\n",
+       " '梁',\n",
+       " '欧',\n",
+       " '此',\n",
+       " '每',\n",
+       " '永',\n",
+       " '浪',\n",
+       " '着',\n",
+       " '福',\n",
+       " '管',\n",
+       " '罗',\n",
+       " '羞',\n",
+       " '英',\n",
+       " '茱',\n",
+       " '蜜',\n",
+       " '表',\n",
+       " '言',\n",
+       " '让',\n",
+       " '话',\n",
+       " '语',\n",
+       " '达',\n",
+       " '难'}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "find_new_chars(master_file, new_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e4ac8a04",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 561 unique 汉字 in data/Chinese-Master.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "master_file = get_unique_chars('data/Chinese-Master.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "41ec7d1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 148 unique 汉字 in data/chinese-books/martian.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "martian = get_unique_chars('data/chinese-books/martian.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "97d48ad7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'七',\n",
+       " '东',\n",
+       " '二',\n",
+       " '什',\n",
+       " '今',\n",
+       " '以',\n",
+       " '候',\n",
+       " '儿',\n",
+       " '前',\n",
+       " '十',\n",
+       " '又',\n",
+       " '叫',\n",
+       " '右',\n",
+       " '吧',\n",
+       " '呢',\n",
+       " '和',\n",
+       " '哪',\n",
+       " '喜',\n",
+       " '四',\n",
+       " '回',\n",
+       " '外',\n",
+       " '完',\n",
+       " '岁',\n",
+       " '左',\n",
+       " '已',\n",
+       " '年',\n",
+       " '怕',\n",
+       " '文',\n",
+       " '星',\n",
+       " '月',\n",
+       " '期',\n",
+       " '本',\n",
+       " '次',\n",
+       " '欢',\n",
+       " '每',\n",
+       " '爸',\n",
+       " '笑',\n",
+       " '第',\n",
+       " '经',\n",
+       " '老',\n",
+       " '见',\n",
+       " '识',\n",
+       " '话',\n",
+       " '谁',\n",
+       " '谢',\n",
+       " '跟',\n",
+       " '都',\n",
+       " '门',\n",
+       " '问',\n",
+       " '马'}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(find_new_chars(master_file, martian))"
    ]
   }
  ],
